[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netgear-ms3xxe"
version = "0.0.0"
description = "Python client for NETGEAR Plus / Easy Smart MS3xxE switches"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["netgear_ms3xxe*"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]
